# weatherapp

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
